Fix NPE on load and improve row clicking (#7590)
* fix NPE on PCGen load, update Agent instructions, stabalize some UI elements (row open/close)

* fixes after review

* Fix Toolkit-not-initialized crash on fresh PCGen launch

PanelFromResource.showAndBlock/showAsStage now lazily bootstrap the
JavaFX toolkit before scheduling work on the FX thread. The previous
JFXPanelFromResource implicitly started the toolkit via its JFXPanel
superclass; PanelFromResource is a plain POJO and did not, so on a fresh
install (no settings.files.path, no -s argument) the OptionsPathDialog
opened from Main.loadProperties hit Platform.runLater before any
JFXPanel was constructed and threw IllegalStateException: Toolkit not
initialized, killing the JVM before the dialog could appear.

The new ensureToolkitInitialized helper calls Platform.startup (catching
IllegalStateException for the already-running case) and forces
implicitExit to false so closing this dialog does not tear down JavaFX
before the rest of the GUI brings up its own Stages.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* more fixes from review

---------

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>